--- a/doc/tips/blog_script.mdwn
+++ b/doc/tips/blog_script.mdwn
@@ -1,5 +1,6 @@
-I have a [blog](http://svn.kitenet.net/trunk/bin/blog) program that I use to
-write blog posts in a text editor. The first line I enter is used as the
-title, and it automatically comes up with a unique page name based on the
-title and handles all the details of posting to my blog. --[[Joey]]
+I have a [blog](http://git.kitenet.net/?p=joey/home;a=blob_plain;f=bin/blog)
+program that I use to write blog posts in a text editor. The first line I
+enter is used as the title, and it automatically comes up with a unique page
+name based on the title and handles all the details of posting to my blog.
+--[[Joey]]
 
