--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -49,11 +49,11 @@ this.
 
 ## multiple accessors of wiki directory
 
-If multiple people can write to the source directory ikiwiki is using, or
-to the destination directory it writes files to, then one can cause trouble
-for the other when they run ikiwiki through symlink attacks.
+If multiple people can directly write to the source directory ikiwiki is
+using, or to the destination directory it writes files to, then one can
+cause trouble for the other when they run ikiwiki through symlink attacks.
 
-So it's best if only one person can ever write to those directories.
+So it's best if only one person can ever directly write to those directories.
 
 ## setup files
 
