--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -57,16 +57,16 @@ So it's best if only one person can ever directly write to those directories.
 
 ## setup files
 
-Setup files are not safe to keep in subversion with the rest of the wiki.
-Just don't do it. [[ikiwiki.setup]] is *not* used as the setup file for
-this wiki, BTW.
+Setup files are not safe to keep in the same revision control repository
+with the rest of the wiki. Just don't do it. [[ikiwiki.setup]] is *not*
+used as the setup file for this wiki, BTW.
 
 ## page locking can be bypassed via direct commits
 
 A locked page can only be edited on the web by an admin, but anyone who is
 allowed to commit directly to the repository can bypass this. This is by
 design, although a pre-commit hook could be used to prevent editing of
-locked pages when using subversion, if you really need to.
+locked pages, if you really need to.
 
 ## web server attacks
 
