* Add umask configuration option. Closes: #443329

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ ikiwiki (2.15) UNRELEASED; urgency=low
     reproduced them), just catch a failure of markdown, and retry.
     (The crazy perl bug magically disappears on the retry.)
     Closes: #449379
+  * Add umask configuration option. Closes: #443329
 
  -- Joey Hess <joeyh@debian.org>  Tue, 27 Nov 2007 00:16:40 -0500
 
