--- a/doc/news/ikiwiki_screencast.mdwn
+++ b/doc/news/ikiwiki_screencast.mdwn
@@ -4,5 +4,9 @@ using ikiwiki.
 
 <http://kitenet.net/~joey/screencasts/ikiwiki_blog/>
 
-Is this useful? Should I go on to cover the second half of setup; checking
-it into revision control and setting up a CGI? --[[Joey]]
+.. And now I've added a second screencast. Note that this uses a script
+that is only available in the as yet unreleased ikiwiki version 2.15.
+
+<http://kitenet.net/~joey/screencasts/ikiwiki_cgi_and_git/>
+
+--[[Joey]]
