--- a/doc/news/ikiwiki_screencast/discussion.mdwn
+++ b/doc/news/ikiwiki_screencast/discussion.mdwn
@@ -2,3 +2,5 @@ Hello! At first, thanks for that screencast! Yes, please make another one.
 I'm rather long-time and experienced user of ikiwiki, but I think I still
 can learn the new things about it. It's also very interesting for me what your
 favourite tools (window manager, editor, browser) are :D --[[Paweł|ptecza]]
+
+> Done --[[Joey]]
