--- a/doc/news/version_2.14/discussion.mdwn
+++ b/doc/news/version_2.14/discussion.mdwn
@@ -3,3 +3,5 @@ Hi Joey! Where can I find the source package for ikiwiki 2.14? I rather prefer
 [Debian page of ikiwiki source package](http://packages.debian.org/unstable/source/ikiwiki)
 and it seems that it still contains older version 2.13. I didn't found
 the latest version at <http://incoming.debian.org/> too. --[[Paweł|ptecza]]
+
+> 2.14 is at the url you cited now. --[[Joey]]
