--- a/doc/todo/Allow_web_edit_form_comment_field_to_be_mandatory.mdwn
+++ b/doc/todo/Allow_web_edit_form_comment_field_to_be_mandatory.mdwn
@@ -18,3 +18,5 @@ In our team internal wiki, we wish to impose a policy that all edits must have a
 > isn't a workable solution. If the template was modified to allow overriding the
 > portion of the message in question, then I agree that a plugin couuld do the rest.
 > Thoughts appreciated :) --[[Dom]]
+
+> Yes, modifying the template is ok. --[[Joey]]
