--- a/doc/news/ikiwiki_screencast/discussion.mdwn
+++ b/doc/news/ikiwiki_screencast/discussion.mdwn
@@ -4,3 +4,5 @@ can learn the new things about it. It's also very interesting for me what your
 favourite tools (window manager, editor, browser) are :D --[[Paweł|ptecza]]
 
 > Done --[[Joey]]
+
+>> Thank you very much! :) --[[Paweł|ptecza]]
