web commit by http://ptecza.myopenid.com/: * Thanks and question

--- a/doc/news/version_2.14/discussion.mdwn
+++ b/doc/news/version_2.14/discussion.mdwn
@@ -5,3 +5,8 @@ and it seems that it still contains older version 2.13. I didn't found
 the latest version at <http://incoming.debian.org/> too. --[[Paweł|ptecza]]
 
 > 2.14 is at the url you cited now. --[[Joey]]
+
+>> Thanks! I can confirm it :) I'm curious what a reason of "delay" is?
+>> The sources were accepted in unstable 2 days ago... Please forgive me
+>> if it's a stupid question, but I don't know how exactly it works in
+>> Debian project. --[[Paweł|ptecza]]
