--- a/doc/news/version_2.14/discussion.mdwn
+++ b/doc/news/version_2.14/discussion.mdwn
@@ -10,3 +10,9 @@ the latest version at <http://incoming.debian.org/> too. --[[Paweł|ptecza]]
 >> The sources were accepted in unstable 2 days ago... Please forgive me
 >> if it's a stupid question, but I don't know how exactly it works in
 >> Debian project. --[[Paweł|ptecza]]
+
+>>> After I upload, ikiwiki is not pushed out to the mirrors until the
+>>> twice-daily mirror sync. After that, packages.debian.org has to run its
+>>> update. I'm not sure what the timing of that is, it seems to be
+>>> somewhat slower than the mirror sync, and also more subject to breaking
+>>> from time to time. --[[Joey]]
