web commit by http://ptecza.myopenid.com/: * Thank you!

--- a/doc/news/version_2.14/discussion.mdwn
+++ b/doc/news/version_2.14/discussion.mdwn
@@ -16,3 +16,5 @@ the latest version at <http://incoming.debian.org/> too. --[[Paweł|ptecza]]
 >>> update. I'm not sure what the timing of that is, it seems to be
 >>> somewhat slower than the mirror sync, and also more subject to breaking
 >>> from time to time. --[[Joey]]
+
+>>>> Thank you for the explanation! :) --[[Paweł|ptecza]]
