--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.15) UNRELEASED; urgency=low
+ikiwiki (2.15) unstable; urgency=low
 
   * Add a new ikiwiki-makerepo program, that automates setting up a repo
     and importing existing content for svn, git, and mercurial. This makes
@@ -12,7 +12,7 @@ ikiwiki (2.15) UNRELEASED; urgency=low
     Closes: #449379
   * Add umask configuration option. Closes: #443329
 
- -- Joey Hess <joeyh@debian.org>  Tue, 27 Nov 2007 00:16:40 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 01 Dec 2007 11:44:01 -0500
 
 ikiwiki (2.14) unstable; urgency=high
 
