web commit by berndhsteiner

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -3,6 +3,12 @@ This is the SandBox, a page anyone can edit to try out ikiwiki.
 Foobar.
 
 ----
+geht das?
+<http://www.orf.at/>
+Hellas zusammen!
+
+<h2>testhead</h2>
+----
 Do re me fa so la te... git?
 
 i see. i see. lalala hmmmmmmmm.
