web commit by http://subvert.org.uk/~bma/: Change of url.

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -42,7 +42,7 @@ Personal sites and blogs
 * [Roland Mas's blog](http://roland.entierement.nu/categories/geek-en.html)
 * [Sergio Talens-Oliag's personal wiki](http://mixinet.net/~sto/) and [blog](http://mixinet.net/~sto/blog.html)
 * [Christian Aichinger's homepage](http://greek0.net/)
-* [Ben A'Lee's homepage](http://bmalee.eu/~bma/)
+* [Ben A'Lee's personal wiki](http://wiki.subvert.org.uk/).
 * [Adam  Shand's homepage](http://adam.shand.net/iki/)
 * [Recai Oktaş's homepage](http://kirkambar.net/) (uses [[rcs/Git]] backend, Turkish language only).
 * [Hess family wiki](http://kitenet.net/~family/)
