--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (2.16) UNRELEASED; urgency=low
+
+  * Remove .otl file from sandbox to avoid build ugliness. Closes: #454181
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
+
 ikiwiki (2.15) unstable; urgency=low
 
   * Add a new ikiwiki-makerepo program, that automates setting up a repo
