web commit by maxx: fix copyright info

--- a/doc/css_market/02_template.css.wiki
+++ b/doc/css_market/02_template.css.wiki
@@ -2,16 +2,12 @@
 
 /* Add local styling here, instead of modifying style.css. */
 
-/* This stylesheet is based on the 1024px template by Andreas Viklund:
-
-   1024px - An open source xhtml/css website template by Andreas Viklund -
-   http://andreasviklund.com . Free to use in any way and for any purpose as
-   long as the proper cr
-   edits are given to the original designer.
-
-   Version: 1.0, March 29, 2006 
+/* This stylesheet is based on 02 Template http://www.openwebdesign.org/viewdesign.phtml?id=3057 
+   by jarico http://www.openwebdesign.org/userinfo.phtml?user=jcarico
 
    modifications for ikiwiki by Martin Wuertele <web@wuertele.net>
+
+   License: public domain
 */
 
 /******** General tags ********/
