--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -21,12 +21,17 @@ files..)
   [[meta stylesheet="embeddedmoose"]]
 
 * **Refresh**, contributed by [[FredericLespez]]. Adapted from a free template
-designed by [styleshout](http://www.styleshout.com).
-You can see it [here](http://fred.ccheznous.org). You can download the local.css file and
-the modified templates [here](http://fred.ccheznous.org/refresh_20060602.tgz).
+  designed by [styleshout](http://www.styleshout.com).
+  You can see it [here](http://fred.ccheznous.org). You can download the local.css file and
+  the modified templates [here](http://fred.ccheznous.org/refresh_20060602.tgz).
 
 * **[[css_market/02_Template.css]]**, contributed and adapted by [maxx](http://martin.wuertele.net/), [original](http://www.openwebdesign.org/viewdesign.phtml?id=3057)
-designed by [jarico](http://www.openwebdesign.org/userinfo.phtml?user=jcarico) (License: public domain). You'll need a modified page.tmpl **[[css_market/02_Template.tmpl]]**. If you prefere [my header image](http://martin.wuertele.net/images/header.png) you can use it under the terms of the MIT License (see png comment).
+  designed by [jarico](http://www.openwebdesign.org/userinfo.phtml?user=jcarico) 
+  (License: public domain). You'll need a modified page.tmpl
+  **[[css_market/02_Template.tmpl]]**. If you prefer 
+  [my header image](http://martin.wuertele.net/images/header.png) you can 
+  use it under the terms of the MIT License (see png comment).
+  [[meta stylesheet="02_Template"]]
 
 If your web browser allows selecting between multiple stylesheets, this
 page can be viewed using many of the stylesheets above. For example, if
