--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -25,7 +25,7 @@ files..)
   You can see it [here](http://fred.ccheznous.org). You can download the local.css file and
   the modified templates [here](http://fred.ccheznous.org/refresh_20060602.tgz).
 
-* [local.css](http://martin.wuertele.net/local.css), contributed and adapted by [maxx](http://martin.wuertele.net/), [original](http://www.openwebdesign.org/viewdesign.phtml?id=3057)
+* **[[02_Template.css]]**, contributed and adapted by [maxx](http://martin.wuertele.net/), [original](http://www.openwebdesign.org/viewdesign.phtml?id=3057)
   designed by [jarico](http://www.openwebdesign.org/userinfo.phtml?user=jcarico) 
   (License: public domain). You'll need a modified page.tmpl
   **[[css_market/02_Template.tmpl]]**. If you prefer 
