web commit by blubb

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -122,3 +122,5 @@ span also doesn't work:
 This sandbox is also a [[blog]]!
 
 [[inline pages="sandbox/* and !*/Discussion" rootpage="sandbox" show="4" archive="yes"]]
+
+[[blubb]]
