--- a/doc/todo/__42__forward__42__ing_functionality_for_the_meta_plugin.mdwn
+++ b/doc/todo/__42__forward__42__ing_functionality_for_the_meta_plugin.mdwn
@@ -1,6 +1,8 @@
 Here is a patch [[tag patch]] to add a *forward*ing functionality
 to the [[`meta`_plugin|plugins/meta]].
 
+> [[done]], with some changes --[[Joey]]
+
 Find the most recent version at
 <http://www.schwinge.homeip.net/~thomas/tmp/meta_forward.patch>.
 
