--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 ikiwiki (2.16) UNRELEASED; urgency=low
 
   * Remove .otl file from sandbox to avoid build ugliness. Closes: #454181
+  * meta: Add redir support, based on a patch by Thomas Schwinge.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 03 Dec 2007 14:47:36 -0500
 
